...
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        tools:layout_editor_absoluteY="82dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="400dp"
...
        android:hint="@string/prompt_password"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="125dp"
        android:layout_above="@+id/newPassword"
        android:layout_toEndOf="@+id/progressBar" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
...
        android:hint="@string/new_pass"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="168dp"
        android:layout_above="@+id/changePass"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/changePass"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
...
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_remove"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="259dp"
        tools:layout_editor_absoluteX="199dp"
        android:layout_above="@+id/change_password_button"
        android:layout_alignStart="@+id/changePass" />

    <Button
        android:id="@+id/change_password_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
...
