...
        android:weightSum="3">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/akun"
                android:layout_width="match_parent"
                android:background="@drawable/btnakun"
                android:layout_height="match_parent"
                android:textSize="20sp" />

        </RelativeLayout>
...
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/Informasi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btninformasi"
                android:textSize="20sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ListView"
                android:background="@drawable/btnlist"
                android:textSize="20sp"/>



        </RelativeLayout>
...
